--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>bolognese-timer</title>
+    <title>Bolognese Timer</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
